--- a/vite-project/src/about/index.pug
+++ b/vite-project/src/about/index.pug
@@ -1,11 +1,11 @@
 extends /pug/_layout
 
 block var_block
-  - title = "Vite環境"
-  - bodyClass = "page-top"
-  
+  - title = "Vite環境2"
+  - bodyClass = "page-about"
+
 block content
-  h1 Vite環境
+  h1 Vite環境2
 
   .image
     img(src="/assets/images/javascript.svg", alt="")
